Draw chart 1 and chart 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="chart2.js"></script>
   </head>
   <body>
-    <h4>Lab 6</h4>
+    <h4>Transportation Fatalities</h4>
     <br />
     <br />
     <div id="wrapper">
